--- a/app/src/main/res/layout/bottom_sheet_gift_home.xml
+++ b/app/src/main/res/layout/bottom_sheet_gift_home.xml
@@ -8,7 +8,45 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvPurchaseVote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:gravity="center"
+                android:padding="7dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/round_button_white_border"
+                android:text="Purchase Vote"
+                android:textAllCaps="true"
+                android:textColor="@color/colorWhite"
+                android:textSize="11dp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/tvNumberOfVote"
+                android:layout_marginStart="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:gravity="center"
+                android:padding="7dp"
+                android:textColorHint="@color/colorBlack"
+                android:hint="Vote Available 200"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textSize="11dp"
+                android:textStyle="bold" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
         <LinearLayout
             android:id="@+id/sendLay"
             android:layout_width="match_parent"
@@ -67,14 +105,14 @@
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/view"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp" />
+                    android:layout_height="300dp" />
 
                 <me.relex.circleindicator.CircleIndicator
                     android:id="@+id/pagerIndicator"
                     android:layout_width="match_parent"
                     android:layout_height="15dp"
                     android:layout_marginBottom="10dp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:ci_drawable="@drawable/circle_primary_bg"
                     app:ci_drawable_unselected="@drawable/circle_secondary_bg" />
             </LinearLayout>
