--- a/app/src/main/res/layout/item_video_following.xml
+++ b/app/src/main/res/layout/item_video_following.xml
@@ -308,10 +308,10 @@
                 <LinearLayout
                     android:id="@+id/votesCountLay"
                     android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="7dp"
                     android:layout_marginEnd="15dp"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -331,7 +331,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
                         android:singleLine="true"
                         android:text="00"
                         android:id="@+id/publisher_vote_count"
@@ -347,7 +346,7 @@
                     android:layout_height="50dp"
                     android:layout_below="@id/votesCountLay"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="40dp"
                     android:background="@drawable/ripple_effect_oval_white"
                     android:gravity="center"
                     android:orientation="vertical">
