--- a/app/src/main/res/layout/foryou_profile.xml
+++ b/app/src/main/res/layout/foryou_profile.xml
@@ -1039,151 +1039,172 @@
                     android:id="@+id/otherUserLay"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
                     android:orientation="vertical"
-                    android:visibility="gone">
-
+                    android:visibility="visible">
 
                     <RelativeLayout
-                        android:id="@+id/otherVideoLay"
+                        android:id="@+id/vCard"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp">
+                        android:background="@drawable/round_button_white_border"
+                        android:gravity="center"
+                        android:padding="10dp">
 
-                        <com.google.android.material.card.MaterialCardView
-
-                            android:id="@+id/vCard"
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/tvVideo"
+                            style="@style/TextSecondaryRegular"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:backgroundTint="@color/colorBlack"
-                            android:clickable="true"
-                            android:elevation="5dp"
-                            android:focusable="true"
-                            android:gravity="center"
-                            app:cardCornerRadius="5dp"
-                            app:cardElevation="2dp"
-                            app:rippleColor="@color/colorPrimary">
+                            android:layout_centerVertical="true"
+                            android:text="@string/videos"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_normal" />
 
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:padding="5dp">
-
-                                <TextView
-
-                                    style="@style/TextSecondaryRegular"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_centerVertical="true"
-                                    android:layout_toEndOf="@+id/iVideo"
-                                    android:text="@string/videos"
-                                    android:textSize="@dimen/text_normal" />
-
-                                <TextView
-                                    android:id="@+id/txtOtherUserVCount"
-                                    style="@style/TextWhiteRegular"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_alignParentEnd="true"
-                                    android:layout_centerVertical="true"
-                                    android:layout_gravity="start|center_vertical"
-                                    android:text="100"
-                                    android:textSize="@dimen/text_normal" />
-
-                                <ImageView
-
-                                    android:id="@+id/iVideo"
-                                    android:layout_width="20dp"
-                                    android:layout_height="20dp"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_centerVertical="true"
-                                    android:layout_marginEnd="15dp"
-                                    android:src="@drawable/videos" />
-
-                            </RelativeLayout>
-
-
-                        </com.google.android.material.card.MaterialCardView>
-
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_below="@+id/vCard"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/colorGrey" />
+                        <TextView
+                            android:id="@+id/txtOtherUserVCount"
+                            style="@style/TextWhiteRegular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start|center_vertical"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_toEndOf="@+id/tvVideo"
+                            android:text="25"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_normal" />
 
 
                     </RelativeLayout>
 
-
-                    <com.google.android.material.button.MaterialButton
-
-                        android:id="@+id/btnFollow"
-                        style="@style/TextWhiteRegular"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp"
-                        android:backgroundTint="@color/colorDarkGrey"
-                        android:insetTop="0dp"
-                        android:insetBottom="0dp"
-                        android:letterSpacing="0"
-                        android:text="@string/unfollow"
-                        android:textAllCaps="false"
-                        android:textSize="@dimen/text_normal"
-                        app:cornerRadius="8dp" />
-
-                    <com.google.android.material.button.MaterialButton
-
-                        android:id="@+id/btnMessage"
-                        style="@style/TextWhiteRegular"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:backgroundTint="@color/colorDarkGrey"
-                        android:insetTop="0dp"
-                        android:insetBottom="0dp"
-                        android:letterSpacing="0"
-                        android:text="@string/message"
-                        android:textAllCaps="false"
-                        android:textSize="@dimen/text_normal"
-                        app:cornerRadius="8dp" />
-
-                   <!-- add Audio call Addon code here-->
-
-                    <com.google.android.material.button.MaterialButton
+                    <RelativeLayout
                         android:id="@+id/btnVideoCall"
-                        style="@style/TextWhiteRegular"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:backgroundTint="@color/colorDarkGrey"
-                        android:insetTop="0dp"
-                        android:insetBottom="0dp"
-                        android:letterSpacing="0"
-                        android:text="@string/video_call"
-                        android:textAllCaps="false"
-                        android:textSize="@dimen/text_normal"
-                        app:cornerRadius="8dp" />
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/round_button_white_border"
+                        android:gravity="center"
+                        android:padding="10dp">
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btnBlock"
-                        style="@style/TextWhiteRegular"
+                        <TextView
+                            android:id="@+id/tvVideoLive"
+                            style="@style/TextSecondaryRegular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:text="Record Live"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_normal" />
+
+                        <TextView
+                            android:id="@+id/tvRecordLive"
+                            style="@style/TextWhiteRegular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start|center_vertical"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_toEndOf="@+id/tvVideoLive"
+                            android:text="25"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_normal" />
+
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/shopBingg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:backgroundTint="@color/colorDarkGrey"
-                        android:insetTop="0dp"
-                        android:insetBottom="0dp"
-                        android:letterSpacing="0"
-                        android:text="@string/block"
-                        android:textAllCaps="false"
-                        android:textSize="@dimen/text_normal"
-                        app:cornerRadius="8dp" />
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/round_button_white_border"
+                        android:gravity="center"
+                        android:padding="10dp">
 
+                        <TextView
+                            android:id="@+id/tvShopBingg"
+                            style="@style/TextSecondaryRegular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:text="Shop Bingg"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_normal" />
+
+                        <TextView
+                            android:id="@+id/tvShopBinggTitle"
+                            style="@style/TextWhiteRegular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="start|center_vertical"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_toEndOf="@+id/tvShopBingg"
+                            android:text="25"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_normal" />
+
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:orientation="horizontal">
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/btnFollow"
+                            style="@style/TextWhiteRegular"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:layout_weight="1"
+                            android:background="@drawable/round_button_white_border"
+                            android:gravity="center"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:letterSpacing="0"
+                            android:padding="10dp"
+                            android:text="@string/unfollow"
+                            android:textAllCaps="false"
+                            android:textSize="@dimen/text_normal"
+                            app:cornerRadius="8dp" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/btnMessage"
+                            style="@style/TextWhiteRegular"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:layout_weight="1"
+                            android:background="@drawable/round_button_white_border"
+                            android:gravity="center"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:letterSpacing="0"
+                            android:padding="10dp"
+                            android:text="@string/message"
+                            android:textAllCaps="false"
+                            android:textSize="@dimen/text_normal"
+                            app:cornerRadius="8dp" />
+                        <!-- Audio call Addon-->
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/btnBlock"
+                            style="@style/TextWhiteRegular"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:layout_weight="1"
+                            android:background="@drawable/round_button_white_border"
+                            android:gravity="center"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:letterSpacing="0"
+                            android:padding="10dp"
+                            android:text="@string/block"
+                            android:textAllCaps="false"
+                            android:textSize="@dimen/text_normal"
+                            app:cornerRadius="8dp" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
