--- a/app/src/main/res/layout/fragment_foryou_video.xml
+++ b/app/src/main/res/layout/fragment_foryou_video.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:id="@+id/parentLay">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:tools="http://schemas.android.com/tools"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
