--- a/app/src/main/res/layout/bottmsheet_home_longpress.xml
+++ b/app/src/main/res/layout/bottmsheet_home_longpress.xml
@@ -9,6 +9,37 @@
 
 
     <LinearLayout
+        android:id="@+id/linearHideShow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        tools:ignore="MissingConstraints">
+
+        <ImageView
+            android:tint="@color/black"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_hide_chat" />
+
+        <TextView
+            android:id="@+id/tvhideShowIicons"
+            style="@style/TextBlackRegular"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:maxLines="1"
+            android:layout_marginStart="20dp"
+            android:text="@string/hideorshowallicons"
+            android:textSize="@dimen/text_normal" />
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
         android:id="@+id/favLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
