--- a/livestreamingaddon/src/main/res/anim/anim_slide_right_in.xml
+++ b/livestreamingaddon/src/main/res/anim/anim_slide_right_in.xml
@@ -2,7 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
     <translate
-        android:duration="@android:integer/config_longAnimTime"
+        android:duration="500"
         android:fromXDelta="-100%"
-        android:toXDelta="0%" />
+        android:toXDelta="0%" >
+    </translate>
 </set>
