--- a/app/src/main/res/layout/item_video_following.xml
+++ b/app/src/main/res/layout/item_video_following.xml
@@ -342,6 +342,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:id="@+id/liveLay"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
